--- a/app/src/main/res/drawable/rounded_edittext.xml
+++ b/app/src/main/res/drawable/rounded_edittext.xml
@@ -8,7 +8,7 @@
     <corners android:radius="10dp"/>
 
     <!-- Cor da borda (opcional) -->
-    <stroke android:color="#074B07" android:width="2dp"/>
+    <stroke android:color="#575757" android:width="2dp"/>
 
     <!-- Padding interno (opcional) -->
     <padding android:left="20dp" android:top="20dp" android:right="20dp" android:bottom="20dp"/>
