--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@drawable/fazenda_urbana"
+        android:background="#FFFFFF"
         tools:ignore="MissingConstraints">
 
         <!-- Seção de dados pessoais -->
