--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fazenda_urbana"
+    android:background="#FFFFFF"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -25,8 +25,9 @@
                 android:layout_height="50dp"
                 android:src="@drawable/ic_boneco"
                 android:layout_alignParentStart="true"
-                android:background="@drawable/bordas"
-                android:contentDescription="Perfil" />
+                android:background="@drawable/bordas2"
+                android:contentDescription="Perfil"
+                tools:ignore="MissingClass" />
 
             <ImageView
                 android:id="@+id/iconCarrinho"
@@ -34,8 +35,9 @@
                 android:layout_height="48dp"
                 android:src="@drawable/carrinho"
                 android:layout_alignParentEnd="true"
-                android:background="@drawable/bordas"
-                android:contentDescription="Carrinho" />
+                android:background="@drawable/bordas2"
+                android:contentDescription="Carrinho"
+                tools:ignore="MissingClass" />
         </RelativeLayout>
 
         <ScrollView
@@ -65,7 +67,7 @@
                         android:hint="Pesquisar produtos"
                         android:padding="8dp"
                         android:layout_marginEnd="8dp"
-                        android:background="@drawable/rounded_edittext"/>
+                        android:background="@drawable/bordas2"/>
 
                     <Button
                         android:id="@+id/btnFilter"
@@ -82,7 +84,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:padding="8dp"
-                    android:background="@drawable/bordas"
+                    android:background="@drawable/bordas2"
                     android:layout_marginBottom="8dp">
 
                     <ImageView
@@ -111,12 +113,14 @@
                             android:id="@+id/tvProductQuantity1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:textStyle="bold"
                             android:text="-" />
 
                         <TextView
                             android:id="@+id/tvProductPrice1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:textStyle="bold"
                             android:text="-" />
 
 
@@ -136,7 +140,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:padding="8dp"
-                    android:background="@drawable/bordas"
+                    android:background="@drawable/bordas2"
                     android:layout_marginBottom="8dp">
 
                     <ImageView
@@ -165,12 +169,14 @@
                             android:id="@+id/tvProductQuantity2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:textStyle="bold"
                             android:text="-" />
 
                         <TextView
                             android:id="@+id/tvProductPrice2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:textStyle="bold"
                             android:text="-" />
                     </LinearLayout>
                 </LinearLayout>
@@ -187,7 +193,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:padding="8dp"
-                    android:background="@drawable/bordas"
+                    android:background="@drawable/bordas2"
                     android:layout_marginBottom="8dp">
 
                     <ImageView
@@ -216,12 +222,14 @@
                             android:id="@+id/tvProductQuantity3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:textStyle="bold"
                             android:text="-" />
 
                         <TextView
                             android:id="@+id/tvProductPrice3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:textStyle="bold"
                             android:text="-" />
                     </LinearLayout>
                 </LinearLayout>
@@ -238,7 +246,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:padding="8dp"
-                    android:background="@drawable/bordas">
+                    android:background="@drawable/bordas2">
 
                     <ImageView
                         android:id="@+id/ivProductImage4"
@@ -266,12 +274,14 @@
                             android:id="@+id/tvProductQuantity4"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:textStyle="bold"
                             android:text="-" />
 
                         <TextView
                             android:id="@+id/tvProductPrice4"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:textStyle="bold"
                             android:text="-" />
                     </LinearLayout>
 
