--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,21 +10,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/home_fazenda"
+        android:background="#E8E8E8"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="16dp"
         tools:layout_editor_absoluteX="-76dp"
         tools:layout_editor_absoluteY="-200dp">
 
-        <!-- Texto Life Green no topo -->
-
-        <!-- Campo CPF -->
-
         <ImageView
             android:id="@+id/imageView5"
             android:layout_width="411dp"
-            android:layout_height="286dp"
+            android:layout_height="267dp"
             android:layout_marginBottom="16dp"
             app:srcCompat="@drawable/logo" />
 
@@ -33,7 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginBottom="16dp"
-            android:background="@drawable/bordas"
+            android:background="@drawable/bordas2"
             android:hint="CPF"
             android:inputType="number"
             android:maxLength="11" />
@@ -43,8 +39,8 @@
             android:id="@+id/txtSenha"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_marginBottom="26dp"
-            android:background="@drawable/bordas"
+            android:layout_marginBottom="28dp"
+            android:background="@drawable/bordas2"
             android:hint="Senha"
             android:inputType="textPassword" />
 
