--- a/app/src/main/res/layout/activity_recuperacao_senha.xml
+++ b/app/src/main/res/layout/activity_recuperacao_senha.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@drawable/fazenda_urbana"
+        android:background="#FFFFFF"
         android:padding="16dp">
 
         <!-- Campo CPF com botão "Enviar Código" -->
